# servicedesk

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
app/: celery_app.py  db.py  main.py
app/api/: tickets.py
app/core/: config.py
app/email/: handlers.py  listener.py  tasks.py
app/models/: __init__.py  message.py  operator.py  ticket.py
app/schemas/: reply.py  ticket.py
app/tests/: conftest.py  test_get_tickets.py  test_reply.py
migrations/: env.py
migrations/versions/: e22b6d070ebb_initial_migration.py  f0c930bf9c47_add_subject_to_ticket_model.py
